--- a/TTDEMON_PROFILE.html
+++ b/TTDEMON_PROFILE.html
@@ -87,14 +87,14 @@
        </div>
        <div class="grid_12">
             <div class="box col3 min12">
-                <center><img class="reseller"src="img/idea.jpg"/></center>
-                <h3 class="name">IdeationX</h3></br>
-                <a href="https://t.me/TdotNyein"><center><input type="submit" value="Telegram"/></center></a>
+                <center><img class="reseller"src="img/Blue.jpg"/></center>
+                <h3 class="name">BLUE</h3></br>
+                <a href="https://t.me/bluecheatmyanmar"><center><input type="submit" value="Telegram"/></center></a>
             </div>
             <div class="box col3 min12">
-                <center><img class="reseller"src="img/kixx.jpg"/></center>
-                <h3 class="name">KIXX</h3></br>
-                <a href="https://t.me/Pro_Hacker18"><center><input type="submit" value="Telegram"/></center></a>
+                <center><img class="reseller"src="img/kenny.jpg"/></center>
+                <h3 class="name">KENNY</h3></br>
+                <a href="https://t.me/KENNY_76"><center><input type="submit" value="Telegram"/></center></a>
             </div>
             <div class="box col3 min12">
                 <center><img class="reseller"src="img/dead.jpg"/></center>
@@ -103,21 +103,13 @@
             </div>
        </div>
        <div class="grid_12">
-            <div class="box col3 min12">
-                <center><img class="reseller"src="img/jack.jpg"/></center>
-                <h3 class="name">MG JACK</h3></br>
-                <a href="https://t.me/RebalX89"><center><input type="submit" value="Telegram"/></center></a>
-            </div>
+            
             <div class="box col3 min12">
                 <center><img class="reseller"src="img/saii.jpg"/></center>
                 <h3 class="name">SaiiCarter</h3></br>
                 <a href="https://t.me/saiicarter"><center><input type="submit" value="Telegram"/></center></a>
             </div>
-            <div class="box col3 min12">
-                <center><img class="reseller"src="img/kenny.jpg"/></center>
-                <h3 class="name">KENNY</h3></br>
-                <a href="https://t.me/KENNY_76"><center><input type="submit" value="Telegram"/></center></a>
-            </div>
+            
        </div>
     </body>
 </html>
